Stop Watch changes
Added Strop watch, working, no way to navigate to it just yet. Dies when
killed. Will find out a way to not let that happen.

--- a/CityTrax/app/src/main/AndroidManifest.xml
+++ b/CityTrax/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
             android:label="Opportunities"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".StopWatch"
+            android:label="StopWatch"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
