Added StopWatch Functionality
Users can save time back into the hour field
Fixed some buttons

--- a/CityTrax/app/src/main/AndroidManifest.xml
+++ b/CityTrax/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
             android:label="StopWatch"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <service android:name=".MyService"/>
     </application>
 
 </manifest>
